--- a/Components/Card/Card.css
+++ b/Components/Card/Card.css
@@ -1,3 +1,8 @@
+:root {
+  --primary-color: #2f3136;
+  --secondary-color: #36393f;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -15,12 +20,16 @@ body {
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 /* ----CARDS---- */
 /* ---BAISC--- */
 .card {
+  background-color: var(--primary-color);
+  color: white;
   overflow: hidden;
+  position: relative;
   margin: 0 auto;
   max-width: 340px;
   border-radius: 5px;
@@ -41,23 +50,19 @@ a {
 
 .title {
   font-size: 1.2rem;
-  font-weight: lighter;
+  font-weight: bolder;
 }
 
 .subtitle {
   font-size: 1rem;
-}
-
-.subtitle,
-.card-text,
-.icon {
-  color: gray;
+  font-weight: bold;
 }
 
 .controls {
   display: flex;
   align-items: center;
   padding: 0.5rem;
+  background-color: var(--secondary-color);
 }
 
 .btn {
@@ -91,5 +96,12 @@ a {
 
 .icon:hover,
 .btn:hover {
-  background-color: #eee;
+  background-color: orangered;
+}
+
+/* ---Basic w/ Text over media--- */
+.text-over-img .card-info {
+  position: absolute;
+  top: 40%;
+  color: white;
 }
