--- a/Components/Card/Card.css
+++ b/Components/Card/Card.css
@@ -47,7 +47,7 @@ a {
 
 .card-info,
 .card-text {
-  padding: 0.6rem;
+  padding: 0.6rem 1rem;
 }
 
 .title {
@@ -111,4 +111,9 @@ a {
 /* ---Basic w/ Header---  */
 .with-header .content .card-info {
   order: -1;
+}
+/* ---Basic w/ Only Buttons---  */
+.only-buttons .icon-container {
+  color: red;
+  display: none;
 }
