--- a/Components/Card/Card.html
+++ b/Components/Card/Card.html
@@ -14,8 +14,8 @@
     <title>Card</title>
   </head>
   <body>
-    <h2 class="header-primary">Basic</h2>
     <!-- BASIC CARD -->
+    <h2 class="header-primary">Basic</h2>
     <div class="card">
       <div class="content">
         <div class="banner">
@@ -44,8 +44,8 @@
         </div>
       </div>
     </div>
-    <h2 class="header-primary">Basic w/ Text over media</h2>
     <!-- VARIANT-1 -->
+    <h2 class="header-primary">Basic w/ Text over media</h2>
     <div class="card text-over-img">
       <div class="content">
         <div class="banner">
@@ -74,9 +74,39 @@
         </div>
       </div>
     </div>
+    <!-- VARIANT-2 -->
     <h2 class="header-primary">Basic w/ Header</h2>
-    <!-- VARIANT-3 -->
     <div class="card with-header">
+      <div class="content">
+        <div class="banner">
+          <img src="https://picsum.photos/340/200" alt="banner" />
+        </div>
+        <div class="card-info">
+          <h2 class="title">Our Changing Planet</h2>
+          <h3 class="subtitle">by Kurt Wanger</h3>
+        </div>
+        <div class="card-text">
+          <p>
+            Visit ten places on our planet that are undergoing the biggest
+            changes today.
+          </p>
+        </div>
+      </div>
+      <div class="controls">
+        <div class="btn-container">
+          <a class="btn" href="#">READ</a>
+          <a class="btn" href="#">BOOKMARK</a>
+        </div>
+        <div class="icon-container">
+          <i class="icon far fa-heart"></i>
+          <i class="icon fas fa-share-alt"></i>
+          <i class="icon fas fa-ellipsis-v"></i>
+        </div>
+      </div>
+    </div>
+    <!-- VARIANT-3 -->
+    <h2 class="header-primary">Basic w/ Only Buttons</h2>
+    <div class="card only-buttons">
       <div class="content">
         <div class="banner">
           <img src="https://picsum.photos/340/200" alt="banner" />
