--- a/Components/Card/Card.css
+++ b/Components/Card/Card.css
@@ -1,8 +1,3 @@
-:root {
-  --primary-color: #2f3136;
-  --secondary-color: #36393f;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -15,110 +10,132 @@ body {
 
 .header-primary {
   text-align: center;
-  margin: 2rem 0;
+  margin-top: 5rem;
 }
 
 a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
-/* ----CARDS---- */
-/* ---BAISC--- */
+/* ---Basic--- */
 .card {
-  background-color: var(--primary-color);
-  color: white;
-  overflow: hidden;
-  position: relative;
-  margin: 0 auto;
-  max-width: 340px;
   border-radius: 5px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  margin: 1rem auto;
+  max-width: 340px;
+  overflow: hidden;
+  position: relative;
 }
 
-.content {
+.card-content {
   display: flex;
   flex-direction: column;
 }
 
-.title {
-  margin-bottom: 0.8rem;
-}
-
-.card-info,
-.card-text {
-  padding: 0.6rem 1rem;
+.card-banner {
+  max-inline-size: 100%;
+  block-size: auto;
 }
 
 .title {
   font-size: 1.2rem;
-  font-weight: bolder;
+  font-weight: 500;
 }
 
 .subtitle {
-  font-size: 1rem;
-  font-weight: bold;
+  font-weight: lighter;
 }
 
-.controls {
+.subtitle,
+.card-text-secondary {
+  font-size: 0.95rem;
+  color: gray;
+}
+
+.card-text-primary,
+.card-text-secondary {
+  padding: 10px 16px;
+}
+
+.card-controls {
+  padding: 16px 10px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  padding: 0.5rem;
-  background-color: var(--secondary-color);
 }
 
 .btn {
-  display: inline-block;
-  font-size: 0.8rem;
-  font-weight: 600;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: bold;
   letter-spacing: 1.05px;
   padding: 0.5rem;
-  border-radius: 5px;
+}
+
+.btn:nth-child(2),
+.icon {
+  margin-left: 10px;
 }
 
 .icon-container {
   margin-left: auto;
 }
 
-.btn:nth-child(2) {
-  margin-left: 6px;
-}
-
 .icon {
-  padding: 0.8rem;
-  text-align: center;
+  padding: 10px;
   border-radius: 50%;
-  margin-left: 6px;
   cursor: pointer;
 }
 
+.icon:nth-child(2) {
+  padding: 10px 12px;
+}
+
 .icon:nth-child(3) {
-  padding: 0.8rem 1.05rem;
+  padding: 10px 16px;
 }
 
-.icon:hover,
-.btn:hover {
-  background-color: orangered;
+.btn:hover,
+.icon:hover {
+  background-color: #ccc;
 }
 
-/* ---Basic w/ Text over media---  */
-.text-over-img .card-info {
+/* ---Basic w/ Text over media--- */
+.text-over-media .card-text-primary {
+  color: white;
   position: absolute;
   top: 40%;
+}
+
+.text-over-media .subtitle {
   color: white;
 }
 
-/* ---Basic w/ Header---  */
-.with-header .content .card-info {
+/* ---Basic w/ Header--- */
+.with-header .card-text-primary {
   order: -1;
 }
-/* ---Basic w/ Only Buttons---  */
+
+/* Basic w/ Only buttons */
 .only-buttons .icon-container {
-  color: red;
   display: none;
 }
 
-/* ---Basic w/ Only Icons--- */
+/* Basic w/ Only icons */
 .only-icons .btn-container {
   display: none;
+}
+
+/* Horizontal Image and Text */
+.horizontal .card-content {
+  flex-direction: row;
+}
+
+.horizontal .card-text-secondary {
+  display: none;
+}
+
+.horizontal .card-banner {
+  max-inline-size: 40%;
 }
