--- a/Components/Card/Card.html
+++ b/Components/Card/Card.html
@@ -14,25 +14,26 @@
     <title>Card</title>
   </head>
   <body>
-    <!-- BASIC CARD -->
+    <!-- Basic -->
     <h2 class="header-primary">Basic</h2>
     <div class="card">
-      <div class="content">
-        <div class="banner">
-          <img src="https://picsum.photos/340/200" alt="banner" />
-        </div>
-        <div class="card-info">
+      <div class="card-content">
+        <img
+          class="card-banner"
+          src="https://i.picsum.photos/id/1041/5184/2916.jpg?hmac=TW_9o6HeD7H7I7NVo-S1Fa1iAvzQ10uvmJqsXvNoi0M"
+        />
+        <div class="card-text-primary">
           <h2 class="title">Our Changing Planet</h2>
-          <h3 class="subtitle">by Kurt Wanger</h3>
+          <h3 class="subtitle">by Kurt Wagner</h3>
         </div>
-        <div class="card-text">
+        <div class="card-text-secondary">
           <p>
             Visit ten places on our planet that are undergoing the biggest
             changes today.
           </p>
         </div>
       </div>
-      <div class="controls">
+      <div class="card-controls">
         <div class="btn-container">
           <a class="btn" href="#">READ</a>
           <a class="btn" href="#">BOOKMARK</a>
@@ -44,25 +45,26 @@
         </div>
       </div>
     </div>
-    <!-- VARIANT-1 -->
+    <!-- Basic w/ Text over media -->
     <h2 class="header-primary">Basic w/ Text over media</h2>
-    <div class="card text-over-img">
-      <div class="content">
-        <div class="banner">
-          <img src="https://picsum.photos/340/200" alt="banner" />
-        </div>
-        <div class="card-info">
+    <div class="card text-over-media">
+      <div class="card-content">
+        <img
+          class="card-banner"
+          src="https://i.picsum.photos/id/1041/5184/2916.jpg?hmac=TW_9o6HeD7H7I7NVo-S1Fa1iAvzQ10uvmJqsXvNoi0M"
+        />
+        <div class="card-text-primary">
           <h2 class="title">Our Changing Planet</h2>
-          <h3 class="subtitle">by Kurt Wanger</h3>
+          <h3 class="subtitle">by Kurt Wagner</h3>
         </div>
-        <div class="card-text">
+        <div class="card-text-secondary">
           <p>
             Visit ten places on our planet that are undergoing the biggest
             changes today.
           </p>
         </div>
       </div>
-      <div class="controls">
+      <div class="card-controls">
         <div class="btn-container">
           <a class="btn" href="#">READ</a>
           <a class="btn" href="#">BOOKMARK</a>
@@ -74,25 +76,26 @@
         </div>
       </div>
     </div>
-    <!-- VARIANT-2 -->
+    <!-- Basic w/ Header -->
     <h2 class="header-primary">Basic w/ Header</h2>
     <div class="card with-header">
-      <div class="content">
-        <div class="banner">
-          <img src="https://picsum.photos/340/200" alt="banner" />
-        </div>
-        <div class="card-info">
+      <div class="card-content">
+        <img
+          class="card-banner"
+          src="https://i.picsum.photos/id/1041/5184/2916.jpg?hmac=TW_9o6HeD7H7I7NVo-S1Fa1iAvzQ10uvmJqsXvNoi0M"
+        />
+        <div class="card-text-primary">
           <h2 class="title">Our Changing Planet</h2>
-          <h3 class="subtitle">by Kurt Wanger</h3>
+          <h3 class="subtitle">by Kurt Wagner</h3>
         </div>
-        <div class="card-text">
+        <div class="card-text-secondary">
           <p>
             Visit ten places on our planet that are undergoing the biggest
             changes today.
           </p>
         </div>
       </div>
-      <div class="controls">
+      <div class="card-controls">
         <div class="btn-container">
           <a class="btn" href="#">READ</a>
           <a class="btn" href="#">BOOKMARK</a>
@@ -104,25 +107,26 @@
         </div>
       </div>
     </div>
-    <!-- VARIANT-3 -->
-    <h2 class="header-primary">Basic w/ Only Buttons</h2>
+    <!-- Basic w/ Only buttons -->
+    <h2 class="header-primary">Basic w/ Only buttons</h2>
     <div class="card only-buttons">
-      <div class="content">
-        <div class="banner">
-          <img src="https://picsum.photos/340/200" alt="banner" />
-        </div>
-        <div class="card-info">
+      <div class="card-content">
+        <img
+          class="card-banner"
+          src="https://i.picsum.photos/id/1041/5184/2916.jpg?hmac=TW_9o6HeD7H7I7NVo-S1Fa1iAvzQ10uvmJqsXvNoi0M"
+        />
+        <div class="card-text-primary">
           <h2 class="title">Our Changing Planet</h2>
-          <h3 class="subtitle">by Kurt Wanger</h3>
+          <h3 class="subtitle">by Kurt Wagner</h3>
         </div>
-        <div class="card-text">
+        <div class="card-text-secondary">
           <p>
             Visit ten places on our planet that are undergoing the biggest
             changes today.
           </p>
         </div>
       </div>
-      <div class="controls">
+      <div class="card-controls">
         <div class="btn-container">
           <a class="btn" href="#">READ</a>
           <a class="btn" href="#">BOOKMARK</a>
@@ -134,25 +138,57 @@
         </div>
       </div>
     </div>
-    <!-- VARIANT-4 -->
-    <h2 class="header-primary">Basic w/ Only Icons</h2>
+    <!-- Basic w/ Only icons -->
+    <h2 class="header-primary">Basic w/ Only buttons</h2>
     <div class="card only-icons">
-      <div class="content">
-        <div class="banner">
-          <img src="https://picsum.photos/340/200" alt="banner" />
-        </div>
-        <div class="card-info">
+      <div class="card-content">
+        <img
+          class="card-banner"
+          src="https://i.picsum.photos/id/1041/5184/2916.jpg?hmac=TW_9o6HeD7H7I7NVo-S1Fa1iAvzQ10uvmJqsXvNoi0M"
+        />
+        <div class="card-text-primary">
           <h2 class="title">Our Changing Planet</h2>
-          <h3 class="subtitle">by Kurt Wanger</h3>
+          <h3 class="subtitle">by Kurt Wagner</h3>
         </div>
-        <div class="card-text">
+        <div class="card-text-secondary">
           <p>
             Visit ten places on our planet that are undergoing the biggest
             changes today.
           </p>
         </div>
       </div>
-      <div class="controls">
+      <div class="card-controls">
+        <div class="btn-container">
+          <a class="btn" href="#">READ</a>
+          <a class="btn" href="#">BOOKMARK</a>
+        </div>
+        <div class="icon-container">
+          <i class="icon far fa-heart"></i>
+          <i class="icon fas fa-share-alt"></i>
+          <i class="icon fas fa-ellipsis-v"></i>
+        </div>
+      </div>
+    </div>
+    <!-- Horizontal Image and Text -->
+    <h2 class="header-primary">Horizontal Image and Text</h2>
+    <div class="card horizontal">
+      <div class="card-content">
+        <img
+          class="card-banner"
+          src="https://i.picsum.photos/id/1041/5184/2916.jpg?hmac=TW_9o6HeD7H7I7NVo-S1Fa1iAvzQ10uvmJqsXvNoi0M"
+        />
+        <div class="card-text-primary">
+          <h2 class="title">Our Changing Planet</h2>
+          <h3 class="subtitle">by Kurt Wagner</h3>
+        </div>
+        <div class="card-text-secondary">
+          <p>
+            Visit ten places on our planet that are undergoing the biggest
+            changes today.
+          </p>
+        </div>
+      </div>
+      <div class="card-controls">
         <div class="btn-container">
           <a class="btn" href="#">READ</a>
           <a class="btn" href="#">BOOKMARK</a>
