--- a/Components/Chips/Chips.css
+++ b/Components/Chips/Chips.css
@@ -11,8 +11,10 @@ body {
 .chip-container {
   border-radius: 10px;
   width: 80%;
-  background-color: #ccc;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  background-color: #333;
+  color: white;
+  box-shadow: 0px 11px 15px -7px rgb(0 0 0 / 20%),
+    0px 24px 38px 3px rgb(0 0 0 / 14%), 0px 9px 46px 8px rgb(0 0 0 / 12%);
   margin: 2rem auto;
   padding: 1rem;
   min-height: 60px;
@@ -21,7 +23,7 @@ body {
 }
 
 .chip {
-  background-color: palevioletred;
+  background-color: blueviolet;
   color: white;
   display: inline-flex;
   align-items: center;
